...
        .lowercase()
        .replace("repeat: ", "")
        .replace(Regex("[^A-Za-z0-9 ]"), "")
        .trim()

    Log.d(
        "SpeakingScreen",
        "Comparing \n$cleanedQuestion \nwith \n$cleanedTranscription, " +
                "\nresult: ${cleanedTranscription == cleanedQuestion}"
    )
    return cleanedTranscription == cleanedQuestion
}

...
    LaunchedEffect(Unit) {
        courseListRef.get().addOnSuccessListener { dataSnapshot ->
            val questionPath = dataSnapshot
                .child(language)
                .child(course)
                .child(lesson)
                .child("Speaking")
                .child(question)

            val questionText = questionPath.child("Text").getValue(String::class.java) ?: ""
            val questionSound = questionPath.child("Sound").getValue(String::class.java) ?: ""
            questionData.add(SpeakingItemQuestion("Question", questionText, questionSound))

...
                        shape = RoundedCornerShape(size = 20.dp)
                    )
                    .padding(10.dp),
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
                Text(
                    modifier = Modifier.testTag("QuestionText"),
                    text = questionText,
                    fontFamily = SeravekFontFamily,
                    fontWeight = FontWeight.Medium,
                    textAlign = TextAlign.Center
                )
            }
...
                    .fillMaxWidth()
                    .padding(horizontal = 16.dp, vertical = 40.dp),
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
                if (isBeingTranscribed) {
                    Text(
                        text = "Processing your answer...",
                        color = Color.White,
                        textAlign = TextAlign.Center
                    )
                }

                transcriptionText?.let { text ->
...
        Row(
            modifier = Modifier.fillMaxWidth(),
            horizontalArrangement = Arrangement.Center
        ) {
            when (recordingState) {
                is RecordingState.Recording -> {
                    MicButton(
                        isRecording = true,
                        onClick = onRecordingStop
                    )
                }
                else -> {
                    MicButton(onClick = onRecordingStart)
...
