...
                    .offset(y = 10.dp)
                    .background(color = Color(0xFF0687A7), shape = RoundedCornerShape(15.dp))
            )
            Button(
                onClick = onClick,
                colors = ButtonDefaults.buttonColors(containerColor = Color(0xFF1AB8E8)),
                modifier = Modifier.fillMaxSize().testTag("SoundButton"),
                shape = RoundedCornerShape(15.dp)
            ) {
            }
            Column(
                modifier = Modifier.fillMaxSize(),
                horizontalAlignment = Alignment.CenterHorizontally,
...
