...
        Column(
            modifier = Modifier.fillMaxSize(),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Card(
                modifier = Modifier.height(65.dp),
                title = "Lesson 2",
                description = "Consumer and Producer Behavior",
                cardType = CardType.GREEN,
                cardShape = CardShape.RECTANGLE,
                progress = null,
                complete = false,
                onClick = null,
...
